<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="theme"
        app:summaryOff="@string/theme_summary_off"
        app:summaryOn="@string/theme_summary_on"
        app:title="@string/theme_title" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="status"
        app:summaryOff="@string/status_summary_off"
        app:summaryOn="@string/status_summary_on"
        app:title="@string/status_title" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="sysSettings"
        app:title="System Settings" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="launcherSettings"
        app:title="Change Home App" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="appchooser"
        app:title="Open App Chooser" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="rate_us"
        app:title="Rate Bit Launcher" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="feedback"
        app:title="FeedBack" />


</androidx.preference.PreferenceScreen>
